--- a/packages/l/libkolabxml/package.yml
+++ b/packages/l/libkolabxml/package.yml
@@ -1,8 +1,9 @@
 name       : libkolabxml
 version    : 1.2.1
-release    : 11
+release    : 12
 source     :
     - git|https://git.kolab.org/diffusion/LKX/libkolabxml.git : libkolabxml-1.2.1
+homepage   : https://git.kolab.org/diffusion/LKX/
 license    :
     - Apache-2.0
     - LGPL-3.0
