--- a/packages/c/cemu/package.yml
+++ b/packages/c/cemu/package.yml
@@ -1,8 +1,9 @@
 name       : cemu
 version    : 2.0
-release    : 1
+release    : 2
 source     :
     - git|https://github.com/cemu-project/Cemu : v2.0-45
+homepage   : https://cemu.info/
 license    : MPL-2.0
 component  : games.emulator
 summary    : An emulator for the Nintendo Wii U
