citra: Rebuild against libboost 1.83.0

--- a/packages/c/citra/package.yml
+++ b/packages/c/citra/package.yml
@@ -1,8 +1,9 @@
 name       : citra
 version    : 1990
-release    : 8
+release    : 9
 source     :
     - git|https://github.com/citra-emu/citra-nightly : nightly-1990
+homepage   : https://citra-emu.org/
 license    : GPL-2.0-or-later
 component  : games.emulator
 summary    : An experimental open-source Nintendo 3DS emulator.
