--- a/packages/t/tomahawk/package.yml
+++ b/packages/t/tomahawk/package.yml
@@ -1,8 +1,9 @@
 name       : tomahawk
 version    : 0.8.4
-release    : 15
+release    : 16
 source     :
     - git|https://github.com/tomahawk-player/tomahawk.git : ad59c9acde5bdc6dfc715e09764fd89b476d3d1d
+homepage   : https://github.com/tomahawk-player/tomahawk
 license    : GPL-3.0-or-later
 component  : multimedia.audio
 summary    : Tomahawk is a free multi-source and cross-platform music player.
