gnome-desktop-branding: replace qtstyleplugins with qadwaitadecorations
The GTK2 based style plugins are quite broken for modern apps &
QGnomePlatform is deprecated (and it also had styling issues)

That leaves us with QAdwaitaDecorations which only replaces the titlebar
with an libadwaita themed one, to fit in the gnome environment, but leaves
general theming to the application and Qt stack.

--- a/packages/g/gnome-desktop-branding/package.yml
+++ b/packages/g/gnome-desktop-branding/package.yml
@@ -1,6 +1,6 @@
 name       : gnome-desktop-branding
 version    : '17'
-release    : 41
+release    : 42
 source     :
     - git|https://github.com/getsolus/gnome-desktop-branding.git : 79a76bd1b8ad4ce58cae698f2d856760f694e396
 license    : GPL-2.0-only
@@ -30,7 +30,7 @@ rundeps    :
     - gnome-shell-extensions
     - gnome-shell-extension-topicons-plus
     - papirus-icon-theme
-    - qtstyleplugins
+    - qadwaitadecorations
     - solus-artwork
     - livecd :
         - gnome-desktop-branding
